--- a/myapplication/src/main/res/values/strings.xml
+++ b/myapplication/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_classes">Classes</string>
     <string name="button_classes">My Classes</string>
+    <string name="welcome">Welcome! Where do you want to go?</string>
+    <string name="button_add_classes">Add more classes</string>
 </resources>
